Revisions for mid-term review: * Moved all data test files to resources folder in path src/test/ * Moved test files related to table_outputs to src/test/table_outputs * Added documentation: ** ChartGenerator ** CommandlineController * Changed Table back to regular class ** Changed Table's methods to make testing in TableTest possible.